grammar/java/FateChaosParser.java
// Generated from FateChaos.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FateChaosParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEP=1, INT=2, NUMBER=3, DICE=4, TEXT=5, CHARACTER=6, END=7, NPC=8, CARD=9, 
		ASPECT=10, HIGHCONCEPT=11, TROUBLE=12, RANDOM=13, RANDOMANY=14, RANDOMSET=15, 
		RANDOMNAME=16, RANDOMPLACE=17, RANDOMDESCRIPTION=18, ATTRIBUTE=19, NOUN=20, 
		ADJECTIVE=21, VERB=22, PLACE=23, PERSON=24, SCENE=25, LOCATION=26, GENERATE=27, 
		ROLL=28, WS=29, COMMENT=30, ANY=31;
	public static final int
		RULE_test = 0, RULE_item = 1, RULE_scene = 2, RULE_character = 3, RULE_npc = 4, 
		RULE_generate = 5, RULE_roll = 6, RULE_aspect = 7, RULE_high_concept = 8, 
		RULE_trouble = 9, RULE_attribute = 10, RULE_location = 11, RULE_set = 12, 
		RULE_description = 13, RULE_name = 14, RULE_place = 15, RULE_element = 16, 
		RULE_random = 17, RULE_phrase = 18, RULE_end = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"test", "item", "scene", "character", "npc", "generate", "roll", "aspect", 
			"high_concept", "trouble", "attribute", "location", "set", "description", 
			"name", "place", "element", "random", "phrase", "end"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEP", "INT", "NUMBER", "DICE", "TEXT", "CHARACTER", "END", "NPC", 
			"CARD", "ASPECT", "HIGHCONCEPT", "TROUBLE", "RANDOM", "RANDOMANY", "RANDOMSET", 
			"RANDOMNAME", "RANDOMPLACE", "RANDOMDESCRIPTION", "ATTRIBUTE", "NOUN", 
			"ADJECTIVE", "VERB", "PLACE", "PERSON", "SCENE", "LOCATION", "GENERATE", 
			"ROLL", "WS", "COMMENT", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FateChaos.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FateChaosParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TestContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FateChaosParser.EOF, 0); }
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitTest(this);
		}
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_test);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				item();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHARACTER) | (1L << NPC) | (1L << ASPECT) | (1L << SCENE) | (1L << GENERATE) | (1L << ROLL))) != 0) );
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemContext extends ParserRuleContext {
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
	 
		public ItemContext() { }
		public void copyFrom(ItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RollDiceContext extends ItemContext {
		public RollContext roll() {
			return getRuleContext(RollContext.class,0);
		}
		public RollDiceContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterRollDice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitRollDice(this);
		}
	}
	public static class PlayerCharacterDefContext extends ItemContext {
		public CharacterContext character() {
			return getRuleContext(CharacterContext.class,0);
		}
		public PlayerCharacterDefContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterPlayerCharacterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitPlayerCharacterDef(this);
		}
	}
	public static class AspectDefContext extends ItemContext {
		public AspectContext aspect() {
			return getRuleContext(AspectContext.class,0);
		}
		public AspectDefContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterAspectDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitAspectDef(this);
		}
	}
	public static class GenerateRequestContext extends ItemContext {
		public GenerateContext generate() {
			return getRuleContext(GenerateContext.class,0);
		}
		public GenerateRequestContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterGenerateRequest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitGenerateRequest(this);
		}
	}
	public static class NonPlayerCharacterDefContext extends ItemContext {
		public NpcContext npc() {
			return getRuleContext(NpcContext.class,0);
		}
		public NonPlayerCharacterDefContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterNonPlayerCharacterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitNonPlayerCharacterDef(this);
		}
	}
	public static class SceneDefContext extends ItemContext {
		public SceneContext scene() {
			return getRuleContext(SceneContext.class,0);
		}
		public SceneDefContext(ItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterSceneDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitSceneDef(this);
		}
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_item);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHARACTER:
				_localctx = new PlayerCharacterDefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				character();
				}
				break;
			case NPC:
				_localctx = new NonPlayerCharacterDefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				npc();
				}
				break;
			case SCENE:
				_localctx = new SceneDefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				scene();
				}
				break;
			case ASPECT:
				_localctx = new AspectDefContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				aspect();
				}
				break;
			case GENERATE:
				_localctx = new GenerateRequestContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(51);
				generate();
				}
				break;
			case ROLL:
				_localctx = new RollDiceContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(52);
				roll();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SceneContext extends ParserRuleContext {
		public TerminalNode SCENE() { return getToken(FateChaosParser.SCENE, 0); }
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<AspectContext> aspect() {
			return getRuleContexts(AspectContext.class);
		}
		public AspectContext aspect(int i) {
			return getRuleContext(AspectContext.class,i);
		}
		public SceneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scene; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterScene(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitScene(this);
		}
	}

	public final SceneContext scene() throws RecognitionException {
		SceneContext _localctx = new SceneContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_scene);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(SCENE);
			setState(56);
			set();
			setState(57);
			location();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ASPECT) {
				{
				{
				setState(58);
				aspect();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharacterContext extends ParserRuleContext {
		public TerminalNode CHARACTER() { return getToken(FateChaosParser.CHARACTER, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public High_conceptContext high_concept() {
			return getRuleContext(High_conceptContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public TroubleContext trouble() {
			return getRuleContext(TroubleContext.class,0);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public CharacterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_character; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterCharacter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitCharacter(this);
		}
	}

	public final CharacterContext character() throws RecognitionException {
		CharacterContext _localctx = new CharacterContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_character);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(CHARACTER);
			setState(67);
			name();
			setState(68);
			high_concept();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TROUBLE) {
				{
				setState(69);
				trouble();
				}
			}

			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ATTRIBUTE) {
				{
				{
				setState(72);
				attribute();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NpcContext extends ParserRuleContext {
		public TerminalNode NPC() { return getToken(FateChaosParser.NPC, 0); }
		public TerminalNode TEXT() { return getToken(FateChaosParser.TEXT, 0); }
		public High_conceptContext high_concept() {
			return getRuleContext(High_conceptContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public TroubleContext trouble() {
			return getRuleContext(TroubleContext.class,0);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public NpcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_npc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterNpc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitNpc(this);
		}
	}

	public final NpcContext npc() throws RecognitionException {
		NpcContext _localctx = new NpcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_npc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(NPC);
			setState(81);
			match(TEXT);
			setState(82);
			high_concept();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TROUBLE) {
				{
				setState(83);
				trouble();
				}
			}

			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ATTRIBUTE) {
				{
				{
				setState(86);
				attribute();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenerateContext extends ParserRuleContext {
		public TerminalNode GENERATE() { return getToken(FateChaosParser.GENERATE, 0); }
		public List<EndContext> end() {
			return getRuleContexts(EndContext.class);
		}
		public EndContext end(int i) {
			return getRuleContext(EndContext.class,i);
		}
		public List<TerminalNode> ASPECT() { return getTokens(FateChaosParser.ASPECT); }
		public TerminalNode ASPECT(int i) {
			return getToken(FateChaosParser.ASPECT, i);
		}
		public List<TerminalNode> CHARACTER() { return getTokens(FateChaosParser.CHARACTER); }
		public TerminalNode CHARACTER(int i) {
			return getToken(FateChaosParser.CHARACTER, i);
		}
		public List<TerminalNode> SCENE() { return getTokens(FateChaosParser.SCENE); }
		public TerminalNode SCENE(int i) {
			return getToken(FateChaosParser.SCENE, i);
		}
		public List<TerminalNode> NPC() { return getTokens(FateChaosParser.NPC); }
		public TerminalNode NPC(int i) {
			return getToken(FateChaosParser.NPC, i);
		}
		public GenerateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterGenerate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitGenerate(this);
		}
	}

	public final GenerateContext generate() throws RecognitionException {
		GenerateContext _localctx = new GenerateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_generate);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(GENERATE);
			setState(96); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(95);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHARACTER) | (1L << NPC) | (1L << ASPECT) | (1L << SCENE))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(98); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==END) {
				{
				{
				setState(100);
				end();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RollContext extends ParserRuleContext {
		public TerminalNode ROLL() { return getToken(FateChaosParser.ROLL, 0); }
		public TerminalNode DICE() { return getToken(FateChaosParser.DICE, 0); }
		public RollContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roll; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterRoll(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitRoll(this);
		}
	}

	public final RollContext roll() throws RecognitionException {
		RollContext _localctx = new RollContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_roll);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ROLL);
			setState(107);
			match(DICE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AspectContext extends ParserRuleContext {
		public TerminalNode ASPECT() { return getToken(FateChaosParser.ASPECT, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public AspectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aspect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterAspect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitAspect(this);
		}
	}

	public final AspectContext aspect() throws RecognitionException {
		AspectContext _localctx = new AspectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_aspect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ASPECT);
			setState(110);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class High_conceptContext extends ParserRuleContext {
		public TerminalNode HIGHCONCEPT() { return getToken(FateChaosParser.HIGHCONCEPT, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public High_conceptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_high_concept; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterHigh_concept(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitHigh_concept(this);
		}
	}

	public final High_conceptContext high_concept() throws RecognitionException {
		High_conceptContext _localctx = new High_conceptContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_high_concept);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(HIGHCONCEPT);
			setState(113);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TroubleContext extends ParserRuleContext {
		public TerminalNode TROUBLE() { return getToken(FateChaosParser.TROUBLE, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public TroubleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trouble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterTrouble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitTrouble(this);
		}
	}

	public final TroubleContext trouble() throws RecognitionException {
		TroubleContext _localctx = new TroubleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_trouble);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(TROUBLE);
			setState(116);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE() { return getToken(FateChaosParser.ATTRIBUTE, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ATTRIBUTE);
			setState(119);
			element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationContext extends ParserRuleContext {
		public TerminalNode LOCATION() { return getToken(FateChaosParser.LOCATION, 0); }
		public PlaceContext place() {
			return getRuleContext(PlaceContext.class,0);
		}
		public LocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitLocation(this);
		}
	}

	public final LocationContext location() throws RecognitionException {
		LocationContext _localctx = new LocationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_location);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LOCATION);
			setState(122);
			place();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(FateChaosParser.TEXT, 0); }
		public TerminalNode RANDOMSET() { return getToken(FateChaosParser.RANDOMSET, 0); }
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).enterSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FateChaosListener ) ((FateChaosListener)listener).exitSet(this);
		}
	}
